--- a/src/main.scss
+++ b/src/main.scss
@@ -16,6 +16,6 @@ canvas {
     border: 1px solid #d8000c;
     color: #d8000c;
     background-color: #ffbaba;
-    padding: 1em;
+    padding: 1em 1em 0 1em;
     margin: 1em 0;
 }
